--- a/four-column.html
+++ b/four-column.html
@@ -7,22 +7,22 @@
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>Four Column | WhizCyber</title>
    <link rel="apple-touch-icon" sizes="57x57" href="assets/images/favicons/apple-icon-57x57.png">
-    <link rel="apple-touch-icon" sizes="60x60" href="assets/images/favicons/apple-icon-60x60.png">
-    <link rel="apple-touch-icon" sizes="72x72" href="assets/images/favicons/apple-icon-72x72.png">
-    <link rel="apple-touch-icon" sizes="76x76" href="assets/images/favicons/apple-icon-76x76.png">
-    <link rel="apple-touch-icon" sizes="114x114" href="assets/images/favicons/apple-icon-114x114.png">
-    <link rel="apple-touch-icon" sizes="120x120" href="assets/images/favicons/apple-icon-120x120.png"> 
-    <link rel="apple-touch-icon" sizes="144x144" href="assets/images/favicons/apple-icon-144x144.png">
-    <link rel="apple-touch-icon" sizes="152x152" href="assets/images/favicons/apple-icon-152x152.png">
-    <link rel="apple-touch-icon" sizes="180x180" href="assets/images/favicons/apple-icon-180x180.png">
-    <link rel="icon" type="image/png" sizes="192x192"  href="assets/images/favicons/android-icon-192x192.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="assets/images/favicons/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="96x96" href="assets/images/favicons/favicon-96x96.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="assets/images/favicons/favicon-16x16.png">
-    <link rel="manifest" href="/manifest.json">
-    <meta name="msapplication-TileColor" content="#ffffff">
-    <meta name="msapplication-TileImage" content="assets/images/favicons/ms-icon-144x144.png">
-    <meta name="theme-color" content="#ffffff">
+   <link rel="apple-touch-icon" sizes="60x60" href="assets/images/favicons/apple-icon-60x60.png">
+   <link rel="apple-touch-icon" sizes="72x72" href="assets/images/favicons/apple-icon-72x72.png">
+   <link rel="apple-touch-icon" sizes="76x76" href="assets/images/favicons/apple-icon-76x76.png">
+   <link rel="apple-touch-icon" sizes="114x114" href="assets/images/favicons/apple-icon-114x114.png">
+   <link rel="apple-touch-icon" sizes="120x120" href="assets/images/favicons/apple-icon-120x120.png">
+   <link rel="apple-touch-icon" sizes="144x144" href="assets/images/favicons/apple-icon-144x144.png">
+   <link rel="apple-touch-icon" sizes="152x152" href="assets/images/favicons/apple-icon-152x152.png">
+   <link rel="apple-touch-icon" sizes="180x180" href="assets/images/favicons/apple-icon-180x180.png">
+   <link rel="icon" type="image/png" sizes="192x192" href="assets/images/favicons/android-icon-192x192.png">
+   <link rel="icon" type="image/png" sizes="32x32" href="assets/images/favicons/favicon-32x32.png">
+   <link rel="icon" type="image/png" sizes="96x96" href="assets/images/favicons/favicon-96x96.png">
+   <link rel="icon" type="image/png" sizes="16x16" href="assets/images/favicons/favicon-16x16.png">
+   <link rel="manifest" href="/manifest.json">
+   <meta name="msapplication-TileColor" content="#ffffff">
+   <meta name="msapplication-TileImage" content="assets/images/favicons/ms-icon-144x144.png">
+   <meta name="theme-color" content="#ffffff">
    <link rel="stylesheet" href="./assets/css/bootstrap.min.css">
    <link rel="stylesheet" href="./assets/js/bootstrap.min.js">
    <link rel="stylesheet" href="./assets/css/style.css">
@@ -37,47 +37,43 @@
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css">
    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
+
 <body>
    <!-- HEADER-SECTION -->
    <div class="home-header-section">
       <figure class="banner-right-img left_icon img">
-          <img src="./assets/images/header-right-img.png" alt="" class="star">
+         <img src="./assets/images/header-right-img.png" alt="" class="star">
       </figure>
       <header class="header">
-        <div class="main-header">
+         <div class="main-header">
             <div class="container-fluid">
-               <div id="navbar-placeholder"></div>
-
-               <script>
-                   fetch('navbar.html')
-                       .then(response => response.text())
-                       .then(data => {
-                           document.getElementById('navbar-placeholder').innerHTML = data;
-                       });
-               </script>
+               <div id="navbar-placeholder">
+               </div>
             </div>
-        </div>
-    </header>
-          <!-- BANNER-SECTION -->
-          <div class="home-banner-section overflow-hidden position-relative sub-banner-section">
-              <div class="banner-container-box">
-                  <div class="container-fluid">
-                      <div class="row">
-                          <div class="col-lg-12">
-                             <div class="sub-banner-outer">
-                              <h1>Four Column</h1>
-                              <p>Quis autem vel eum iure reprehenderit qui in ea voluptate 
-                                 velit esse ruam nihil molestiae.</p>
-                                 <div class="banner-btn discover-btn-banner">
-                                     <div class="btn-inner">Home <span class="arrow-angles"><i class="fa fa-angles-right"></i></span><span class="about-margin">Four Column</span></div>
-                                 </div>
-                             </div>
-                          </div>
-                      </div>
+         </div>
+      </header>
+      <!-- BANNER-SECTION -->
+      <div class="home-banner-section overflow-hidden position-relative sub-banner-section">
+         <div class="banner-container-box">
+            <div class="container-fluid">
+               <div class="row">
+                  <div class="col-lg-12">
+                     <div class="sub-banner-outer">
+                        <h1>Four Column</h1>
+                        <p>Quis autem vel eum iure reprehenderit qui in ea voluptate
+                           velit esse ruam nihil molestiae.</p>
+                        <div class="banner-btn discover-btn-banner">
+                           <div class="btn-inner">Home <span class="arrow-angles"><i
+                                    class="fa fa-angles-right"></i></span><span class="about-margin">Four Column</span>
+                           </div>
+                        </div>
+                     </div>
                   </div>
-           </div>
+               </div>
+            </div>
+         </div>
       </div>
-  </div>
+   </div>
    <!-- MAIN SECTION -->
    <section class="blog-posts overflow-hidden">
       <div class="container">
@@ -380,97 +376,10 @@
          </div>
       </div>
    </section>
- <!-- Footer-Section -->
- <div class="footer-section">
-   <div class="container">
-       <div class="row">
-           <div class="col-lg-4 col-md-4 col-sm-6">
-               <div class="footer-content1">
-                  <a href="index.html" class="text-decoration-none"><figure><img src="./assets/images/footer-logo.png" alt="" class="img-fluid"></figure></a>
-                   <p class="footer-section-text">Deleniti aeue corrupti quos dolores et quas molestias excepturi sint occaecati rupiditate non provident, similique sunt...</p>
-                   <ul class="list-unstyled">
-                       <li class="list-item">
-                           <a href="#"><i class="fa-brands fa-facebook-f marginLeft"></i></a>
-                           <a href="#"><i class="fa-brands fa-twitter marginLeft"></i></a>
-                           <a href="#"><i class="fa-brands fa-instagram marginLeft"></i></a>
-                       </li>
-                   </ul>
-               </div>
-           </div>
-           <div class="col-lg-2 col-md-2 col-sm-12 d-lg-block d-none">
-               <h5 class="footer-link footer-next-list footer-next-list-about">About Us</h5>
-               <ul class="useful-footer"> 
-                   <li>
-                       <a href="services.html" class="text-decoration-none footer-link-p">
-                           Services
-                       </a>
-                   </li>
-                   <li>
-                       <a href="pricing.html" class="text-decoration-none footer-link-p">
-                           Pricing
-                       </a>
-                   </li>
-                   <li>
-                       <a href="about.html" class="text-decoration-none footer-link-p">
-                          About Us
-                       </a>
-                   </li>
-                   <li>
-                       <a href="our-team.html" class="text-decoration-none footer-link-p">
-                           Our Teams
-                       </a>
-                   </li>
-                   <li>
-                       <a href="./contact.html" class="text-decoration-none footer-link-p">
-                           Contact us
-                       </a>
-                   </li>
-               </ul>
-           </div>
-           <div class="col-lg-3 col-md-4 col-sm-12 d-md-block d-none">
-               <h5 class="footer-link text-white footer-next-list footer-next-list-contact">Contact Info</h5>
-               <div class="footer-list footer-link contact-list">
-                   <div class="icon-list-box1">
-                       <ul class="list-unstyled contact-us-ul">
-                           <li class="list-item">
-                           <a href="tel:+4733378901" class="text-decoration-none footer-link-auto">+61 3 8376 6284</a>
-                           <i class="fa fa-phone fa-icon footer-location3"></i>
-                           </li>
-                           <li class="list-item">
-                           <a href="mailto:webmaster@example.com" class="text-decoration-none footer-link-auto">Info@whizcyber.om</a>
-                           <i class="fa fa-envelope fa-icon footer-location2"></i>
-                           </li>
-                           <li class="list-item">
-                           <a class="text-decoration-none footer-link-auto">21 King Street Melbourne,3000, Australia</a>
-                           <i class="fa-solid fa-location-dot footer-location"></i>
-                           </li>
-                       </ul>
-                   </div>
-               </div>
-           </div>
-           <div class="col-lg-3 col-md-4 col-sm-6">
-               <div class="footer-list signupbox">
-                   <h4 class="footer-link text-white footer-next-list footer-next-list-signup">Sign up for Newsletter</h4>
-                   <div class="icon-list-box1">
-                       <div class="col-inner">
-                           <input type="tel" name="email" class="form-control input-fill" placeholder="Email Address:">
-                       </div>
-                       <div class="form-btn">
-                           <button type="submit" class="btn btn-primary">Subscribe</button>
-                       </div>
-                   </div>
-               </div>
-           </div>
-       </div>           
+   <!-- Footer-Section -->
+   <div id="footer-placeholder">
    </div>
-   <div class="footer-bar text-center">
-       <div class="row">
-           <div class="footer-bar-content w-100">
-               <p class="text-size-16 mb-0">Whizcyber copyright © 2022. All Rights Reserved.</p>
-           </div>
-       </div>
-  </div>
-</div>
+   <script src="assets/js/loadContent.js"></script>
    <script src="https://code.jquery.com/jquery-1.12.1.min.js"></script>
    <script src="assets/js/animations.js"></script>
    <script src="assets/js/bootstrap.min.js"></script>
@@ -485,7 +394,7 @@
    <script src="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/jquery.magnific-popup.js"></script>
    <script src="https://unpkg.com/ityped@0.0.10"></script>
    <script src="./assets/js/type.js"></script>
- 
+
 </body>
 
 </html>
