Added team members. Contact-form.php Security hardening.

--- a/our-team.html
+++ b/our-team.html
@@ -92,7 +92,7 @@
                             </ul>
                         </div>
                         <div class="teams-text">
-                            <h5>Morgan Cooper</h5>
+                            <h5>Bengisu</h5>
                             <p>CEO & FOUNDER</p>
                         </div>
                     </div>
@@ -113,7 +113,7 @@
                             </ul>
                         </div>
                         <div class="teams-text">
-                            <h5>Amanda Brown</h5>
+                            <h5>Oguzhan</h5>
                             <p>SECURITY HEAD</p>
                         </div>
                     </div>
@@ -134,8 +134,8 @@
                             </ul>
                         </div>
                         <div class="teams-text">
-                            <h5>Duglas Rovland</h5>
-                            <p>CEO & FOUNDER</p>
+                            <h5>Nilay</h5>
+                            <p>Cyber Analyst</p>
                         </div>
                     </div>
                 </div>
@@ -158,50 +158,8 @@
                             </ul>
                         </div>
                         <div class="teams-text">
-                            <h5>Morgan Cooper</h5>
+                            <h5>Serdar</h5>
                             <p class="row2mb">CYBER ANALYST</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-4 col-sm-6">
-                    <figure class="teams-fig">
-                        <img src="./assets/images/teams-section-page-img5.png" alt="" class="img-fluid">
-                    </figure>
-                    <div class="teams-img-content">
-                        <div class="hover_box_plus">
-                            <ul class="p-0 text-center row2mbul">
-                                <li><a href="#" class="text-decoration-none"><i class="fa-brands fa-facebook-f"></i></a>
-                                </li>
-                                <li><a href="#" class="text-decoration-none"><i class="fa-brands fa-twitter"></i></a>
-                                </li>
-                                <li><a href="#" class="text-decoration-none"><i class="fa-brands fa-instagram"></i></a>
-                                </li>
-                            </ul>
-                        </div>
-                        <div class="teams-text">
-                            <h5>John Richard</h5>
-                            <p class="row2mb">Performance Advisor</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-4 col-sm-6">
-                    <figure class="teams-fig">
-                        <img src="./assets/images/teams-section-page-img6.png" alt="" class="img-fluid">
-                    </figure>
-                    <div class="teams-img-content">
-                        <div class="hover_box_plus">
-                            <ul class="p-0 text-center row2mbul">
-                                <li><a href="#" class="text-decoration-none"><i class="fa-brands fa-facebook-f"></i></a>
-                                </li>
-                                <li><a href="#" class="text-decoration-none"><i class="fa-brands fa-twitter"></i></a>
-                                </li>
-                                <li><a href="#" class="text-decoration-none"><i class="fa-brands fa-instagram"></i></a>
-                                </li>
-                            </ul>
-                        </div>
-                        <div class="teams-text">
-                            <h5>Kolin C. Ward</h5>
-                            <p class="row2mb">Performance Advisor</p>
                         </div>
                     </div>
                 </div>
