--- a/index.html
+++ b/index.html
@@ -34,6 +34,13 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/owl.carousel.min.css">
     <link rel="stylesheet" href="assets/css/owl.theme.default.min.css">
+    <style>
+        .teams-img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+        }
+    </style>
 </head>
 
 <body>
@@ -678,7 +685,7 @@
                     <div class="row">
                         <div class="col-lg-6 col-md-6 col-sm-6">
                             <figure class="teams-fig">
-                                <img src="./assets/images/teams-img1.png" alt="">
+                                <img src="./assets/images/teams-img1.png" class="teams-img" alt="">
                             </figure>
                             <div class="teams-img-content">
                                 <div class="hover_box_plus">
@@ -692,14 +699,14 @@
                                     </ul>
                                 </div>
                                 <div class="teams-text">
-                                    <h5>Morgan Cooper</h5>
+                                    <h5>Bengisu</h5>
                                     <p>CEO & FOUNDER</p>
                                 </div>
                             </div>
                         </div>
                         <div class="col-lg-6 col-md-6 col-sm-6">
                             <figure class="teams-fig">
-                                <img src="./assets/images/teams-img2.png" alt="">
+                                <img src="./assets/images/teams-img2.png" class="teams-img" alt="">
                             </figure>
                             <div class="teams-img-content">
                                 <div class="hover_box_plus">
@@ -713,7 +720,7 @@
                                     </ul>
                                 </div>
                                 <div class="teams-text">
-                                    <h5>Amanda Brown</h5>
+                                    <h5>Oguzhan</h5>
                                     <p>SECURITY HEAD</p>
                                 </div>
                             </div>
@@ -722,7 +729,7 @@
                     <div class="row">
                         <div class="col-lg-6 col-md-6 col-sm-6">
                             <figure class="teams-fig">
-                                <img src="./assets/images/teams-img3.png" alt="">
+                                <img src="./assets/images/teams-img3.png" class="teams-img" alt="">
                             </figure>
                             <div class="teams-img-content">
                                 <div class="hover_box_plus">
@@ -736,14 +743,14 @@
                                     </ul>
                                 </div>
                                 <div class="teams-text">
-                                    <h5>Duglas Rovland</h5>
+                                    <h5>Nilay</h5>
                                     <p>CYBER ANALYST</p>
                                 </div>
                             </div>
                         </div>
                         <div class="col-lg-6 col-md-6 col-sm-6">
                             <figure class="teams-fig">
-                                <img src="./assets/images/teams-img4.png" alt="">
+                                <img src="./assets/images/teams-img4.png" class="teams-img" alt="">
                             </figure>
                             <div class="teams-img-content">
                                 <div class="hover_box_plus">
@@ -757,8 +764,8 @@
                                     </ul>
                                 </div>
                                 <div class="teams-text">
-                                    <h5>Christin Jonson</h5>
-                                    <p>ETHICAL HACKER</p>
+                                    <h5>Serdar</h5>
+                                    <p>CYBER ANALYST</p>
                                 </div>
                             </div>
                         </div>
